--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:commander --external:dotenv",
     "dev": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:commander --external:dotenv --watch",
     "dev:test": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:commander --external:dotenv --watch",
-    "dev:full": "concurrently \"npm run dev\" \"npm run test:watch\"",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "start:tsx": "tsx src/index.ts",
+    "dev:tsx": "tsx watch src/index.ts"
   },
   "keywords": [
     "transaction",
@@ -23,10 +24,10 @@
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/node": "^20.8.10",
-    "concurrently": "^9.2.0",
     "esbuild": "^0.19.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
